[metadata]
name = labsnake
description = A demo scientific application for the lab
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/TO COMPLETE
author = Christian Baker & Francois Joubert
author_email = christian.baker@kcl.ac.uk, fxa.joubert@gmail.com
license = MIT
license_file = LICENSE
classifiers =
 Development Status :: 4 - Beta
 Intended Audience :: Science/Research
 License :: OSI Approved :: MIT License
 Natural Language :: English
 Operating System :: POSIX :: Linux
 Operating System :: Microsoft :: Windows :: Windows 10
 Operating System :: MacOS :: MacOS X
 Programming Language :: Python :: 3.10
 Topic :: Scientific/Engineering
 Typing :: Typed
project_urls =
 Source = TO COMPLETE
 Tracker = TO COMPLETE

[options]
zip_safe = False
packages = find:
package_dir =
  =.
include_package_data = True
install_requires =
 matplotlib>=3.5.3
 numpy>=1.23.3
 opencv-python>=4.6.0.66
python_requires = >=3.8

[options.packages.find]
where = .
exclude = tests

[options.package_data]
* = py.typed

[bdist_wheel]
universal = false

[aliases]
test=pytest

[options.extras_require]
dev =
 pytest == 7.1.2
 flake8 == 4.0.1
 mypy == 0.961
 pdoc == 12.0.2

[mypy]
python_version = 3.10
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

# Prevent setup.py typing errors
[mypy-setup]
ignore_errors = True


[flake8]
exclude = .bzr,.hg,.git,__pycache__,.tox,setup.py,.eggs,.pytest_cache,.mypy_cache,.github,_version.py
max-line-length = 120
application_import_names = labsnake, tests
import-order-style = pycharm
ignore=E127,E126,W504,W503,F541,E501
